--- a/css/styles.css
+++ b/css/styles.css
@@ -96,6 +96,10 @@ textarea {
   .container {
     flex-direction: column;
   }
+  textarea {
+    resize: none;
+    max-height: calc(50vh - 3rem);
+  }
   #swap-btn {
     transform: rotate(90deg);
     margin: 0;
