Bug fix: font size

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,6 +93,9 @@ textarea {
   h1 {
     font-size: 1.3rem;
   }
+  textarea {
+    font-size: 1.3rem;
+  }
   .container {
     flex-direction: column;
   }
